--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "vue": "^2.6.12"
+  },
+  "devDependencies": {
+    "prettier": "2.5.1"
   }
 }
