--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^1.12.4",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "qrcodejs": "^1.0.0",
     "vue": "^2.6.12"
   },
   "devDependencies": {
